--- a/index.html
+++ b/index.html
@@ -86,6 +86,13 @@
                         Create Passkey
                     </button>
                 </div>
+                <div>
+                    <h3 class="font-medium text-gray-700 mb-3">Non-discoverable Credentials</h3>
+                    <label class="flex items-center space-x-3 cursor-pointer p-3 bg-gray-50 rounded-md border hover:bg-gray-100">
+                        <input type="checkbox" id="non-discoverable-checkbox" class="w-5 h-5 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 focus:ring-2">
+                        <span class="text-gray-700 font-medium">set: residentKey: discouraged</span>
+                    </label>
+                </div>
             </div>
         </details>
 
